# uplot-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi.yml
examples/: left_right_axes.py  simple_plot.py  simple_plot2.py
tests/: test_color_picker.py  test_generate_html.py  test_plot.py
uplot/: __init__.py  exceptions.py  generate_html.py  plot.py  plot2.py  utils.py  write_html_tempfile.py
