[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uplot-python"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "ipython >=8.0.1",
    "msgpack >=1.0.4",
    "numpy >=1.15.4",
]
keywords = ["json", "time", "series", "plot"]

[project.urls]
Homepage = "https://github.com/stephane-caron/uplot-python"
Source = "https://github.com/stephane-caron/uplot-python"
Tracker = "https://github.com/stephane-caron/uplot-python/issues"
Changelog = "https://github.com/stephane-caron/uplot-python/blob/master/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "uplot"

[tool.pytype]
inputs = ['uplot']

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.lint.pydocstyle]
convention = "google"
